--- a/style.css
+++ b/style.css
@@ -5,9 +5,29 @@
 
 }
 
+body,
+html {
+    height: 100%;
+    font-family: Arial, sans-serif;
+}
+
+/* hero  */
+
 .hero {
     margin-left: 100px;
-    margin-top: 20px;
+    margin-top: 100px;
+
+}
+
+.header {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.globe {
+    border: none;
+    border-color: transparent;
 }
 
 .sm-head {
@@ -49,14 +69,30 @@ td {
 
 }
 
+.slider {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
 .cards {
     display: flex;
     gap: 40px;
     width: 80vw;
     margin-top: 20px;
-    margin-left: 40px;
+}
 
+.previous,
+.next {
+    background: rgb(40, 40, 40);
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    color: white;
+}
 
+.fas {
+    cursor: pointer;
 }
 
 .card {
@@ -67,44 +103,124 @@ td {
     border: 2px black solid;
     width: 25%;
 }
-.cardio, .cns{
-    border-color: rgb(31,94,98);
- 
+
+.cardio,
+.cns {
+    border-color: rgb(31, 94, 98);
+
 }
-.derma{
-    border-color: rgb(138,103,95);
+
+.derma {
+    border-color: rgb(138, 103, 95);
 }
-.immu{
-    border-color: rgb(229,107,109);
+
+.immu {
+    border-color: rgb(229, 107, 109);
 }
-.card >p{
-   
+
+.card>p {
+
     color: grey;
 
 }
-.card>h1{
+
+.card>h1 {
     margin-top: 7px;
 }
-.card >.above{
-    
+
+.card>.above {
+
     text-align: start;
 }
-.card> .below{
+
+.card>.below {
     margin-top: 4px;
     font-size: x-large;
 }
-.logo-box{
+
+.logo-box {
     margin-top: 15px;
     height: 20%;
-    width: 20%;
-   border-radius: 10px;
-  ;
+    width: 22%;
+    border-radius: 10px;
+    ;
 }
-.cns > .logo-box{
- 
-    background: rgb(31,94,98);
+
+.cns>.logo-box {
+
+    background: rgb(31, 94, 98);
 }
-.cardio> .logo-box{
- 
-    background: rgb(31,94,98);
+
+.cardio>.logo-box {
+
+    background: rgb(31, 94, 98);
+}
+
+.derma>.logo-box {
+    background: rgb(138, 103, 95);
+}
+
+.immu>.logo-box {
+    background: rgb(229, 107, 109);
+}
+
+
+/* experience  */
+.experience {
+    margin-top: 50px;
+    background: black;
+    color: white;
+    height: 70rem;
+  
+
+}
+
+.experience>h1 {
+    padding-top: 50px;
+
+    font-size: 80px;
+    text-align: center;
+    color: white;
+}
+
+.experience>h2 {
+    font-size: 50px;
+    color: gray;
+    text-align: center;
+    margin-top: 10px;
+}
+
+
+.container {
+    margin-top: 30px;
+    margin-left: 200px;
+    margin-right: 200px;
+    display: grid;
+    column-gap: 5px;
+    row-gap: 180px;
+    grid-auto-rows: 100px;
+    /* Auto rows */
+    grid-auto-flow: row;
+    grid-template-columns: repeat(3, 1fr);
+
+}
+
+.block {
+    background-color: #282828;
+    padding: 40px;
+    padding-bottom: 70px;
+    height: 150px;
+    width: 370px;
+    border-radius: 10px;
+
+}
+
+.title {
+    font-size: xxx-large;
+    font-weight: 700;
+}
+
+.subtitle {
+    margin-top: 10px;
+    font-size: x-large;
 }
